# mellow-programming-language

./: .gitignore  CHANGELOG.md  CHANGELOG_v1_4_9.md  CHANGELOG_v1_5_0.md  LICENSE  NOTICE.md  README.md  SPEC.md  install.sh  main.py  mellow.cmd  mellow.ps1  profile.json  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yml
benchmarks/: README.md  RESULTS_2_9_5.md  data_core_benchmark.py  language_runtime_benchmark.py  native_data_transform_benchmark.py  run_all.py  standalone_runtime_benchmark.py
benchmarks/native_vs_lua/: RESULTS_2026-06-23.md  sum_loop.lua  sum_loop.mellow
benchmarks/native_vs_zig/: README.md  RESULTS_2026-07-01-after-call-string-fastpath-v2.json  branch_mod.c  branch_mod.lua  branch_mod.mellow  branch_mod.py  branch_mod.zig  function_calls.c  function_calls.lua  function_calls.mellow  function_calls.py  function_calls.zig  list_index.c  list_index.lua  list_index.mellow  list_index.py  list_index.zig  run_compare.py  string_concat.c  string_concat.lua  string_concat.mellow  string_concat.py  string_concat.zig  sum_loop.c  sum_loop.lua  sum_loop.py  sum_loop.zig
deploy/cloudflare-public-registry/: README.md  package-lock.json  package.json  seed_token.sql  tsconfig.json  wrangler.toml
docs/: AGENT_REGISTRY.md  CAPABILITIES.md  CLI.md  CLI_160.md  CLI_UX.md  COMPILER_V3.md  CORE_DOCS.md  CORE_PACKAGES.md  C_HYBRID.md  DATA_PROCESSING_CORE.md  DESKTOP_NATIVE_RUNTIME.md  INSTALL.md  INTEROP.md  LANGUAGE_SPEC_2_9.md  LANGUAGE_SPEC_3_0.md  LEDGER_CORE.md  LOCKFILE_AND_IMPORTS.md  LSP.md  MELLOWLANG_User_Manual.md  MELLOWLANG_v148_Manual.md  MELLOW_2_COMPILER_PIPELINE.md  MELLOW_PACKAGE_REGISTRY_SPEC.md  MELLOW_PUBLIC_REGISTRY_SPEC_v153.md  MELLOW_RUNTIME.md  MELLOW_SDK.md  MELV2_SPEC.md  MMG_GPU_NATIVE_ENGINE.md  MMG_GPU_NEXT.md  NATIVE_CPU_BACKENDS.md  NATIVE_C_DEBUG_PARITY.md  NATIVE_PACKAGE_RESOLVER.md  NATIVE_VM.md  NATIVE_VM_RUNTIME_PARITY.md  PACKAGE_RUNTIME_INTEGRATION.md  PACKAGE_SYSTEM_2_9.md  PLAYGROUND.md  PLAYGROUND_PRO.md  POLICY_v1x.md  PRIVATE_PACKAGES_AND_RUNTIME.md  PROJECT_STRUCTURE.md  (+59 more)
docs/experimental/: AGENT_LOCKFILE_AND_PRIVATE_REGISTRY.md  AGENT_PACKAGES.md  AGENT_SIGNING_AND_DEPENDENCIES.md  AI_NATIVE_OVERVIEW.md  AI_SECURITY_PERFORMANCE_POLICY.md  DEPLOYMENT_TARGETS.md  DESKTOP_RUNTIME.md  MELLOW_151_OVERVIEW.md  MELLOW_160_OVERVIEW.md  MMG_NATIVE_BUILD_PARITY.md  MMG_NATIVE_PIPELINE.md  MMG_RENDER_CORE.md  MMG_RUNTIME.md  PLAYGROUND_TIME_TRAVEL.md  (+4 more)
examples/: .mellow_aliases.json  ai_api_v151.mellow  ai_behaviors.mellow  ai_runtime.mellow  ai_v148.mellow  canvas_circle.mellow  circle_python_style.mellow  circle_terminal.mellow  data_processing.mellow  files.mellow  game_astar.mellow  game_engine_v151.mellow  game_helpers.mellow  hello.mellow  hello.mellowc.json  hello213.mvi  hello_cli.mvi  legacy_compat.mellow  loops.mellow  mathlib.mellow  mellow_sdk_deepseek.mellow  mmg_build_parity_demo.mel  mmg_gpu_native_demo.mel  mmg_hello.mel  mmg_input_state_demo.mel  mmg_native_pipeline_demo.mel  mmg_render_core_demo.mel  modern_quickstart.mellow  modules_v148.mellow  online_hybrid_save.mellow  package_demo.md  package_online_v152.md  public_registry_v153.md  sandbox.mellow  skills.mellow  storage.mellow  syntax_tour_v280.mellow  try_catch.mellow  v147_features.mellow  v149_features.mellow  (+6 more)
frameworks/: __init__.py
mellow_models/: xor_v148.mmodel
native/mmg_gpu/: CMakeLists.txt  README.md
native/mmg_gpu/include/: mmg_gpu.h
native/mmg_gpu/scripts/: build_linux.sh  build_windows.bat  build_windows.ps1
native/mmg_gpu/shaders/: color.frag  color.vert  sprite.frag  sprite.vert
native/mmg_gpu/src/: main.c  renderer_gl.c  scene_parser.c
native/standalone/: CMakeLists.txt  README.md
native/standalone/examples/: hello_runtime.c
native/standalone/fuzz/: fuzz_mellow.c
native/standalone/fuzz/corpus/: core.mellow  functions.mellow  integer-overflow.mellow  invalid.mellow
native/standalone/include/: mellow_runtime.h  mellowc_internal.h  mellowrt.h  mellowrt_packages.h  mellowrt_scheduler.h  mellowrt_syscalls.h
native/standalone/src/: mellow_runtime.c  mellowc.c  mellowc_lexer.c  mellowc_modules.c  mellowc_parser.c  mellowrt_core.c  mellowrt_debug.c  mellowrt_main.c  mellowrt_packages.c  mellowrt_platform.c  mellowrt_scheduler.c  mellowrt_syscalls.c
plugin_sdk/: README.md  mellow_plugin.py
project_template/: mellow.json  mellowlang.json
scripts/: audit-workspace.ps1  build-native-windows.ps1  build_native_vm.bat  build_native_vm.sh  ci_native_probe.py  clean-worktree.ps1  install-native.ps1  install-native.sh  package_release_gate.py  test-v293-stability.ps1  test-v294-stability.ps1  test-v3-stability.ps1
sdk/: README.md
spec/: mellow-2.9-core.json  mellow-2.9.3-stability.json  mellow-2.9.4-stability.json  mellow-2.9.6-stability.json  mellow-2.9.7-stability.json  mellow-3.0-stability.json
starter_packages/: README.md
stdlib/: core.mel
tests/: test_ai_runtime_added.py  test_comments.py  test_compiler_cache.py  test_core.py  test_core_llm_package.py  test_game_stdlib.py  test_native_default_cli.py  test_net_and_signed_save.py  test_project_mode.py  test_quality_gates.py  test_secure_save.py  test_security_performance_gates.py  test_v148.py  test_v151_features.py  test_v152_online_registry.py  test_v153_public_registry.py  test_v153_security_hotfix.py  test_v154_cli_registry.py  test_v157_core_packages.py  test_v158_lockfile.py  test_v159_runtime_and_imports.py  test_v164_cli_ux.py  test_v1651_lsp_hotfix.py  test_v165_doctor_and_lsp.py  test_v170_agents.py  test_v171_agent_packages.py  test_v172_agent_registry.py  test_v173_agent_signing.py  test_v174_agent_lockfile.py  test_v180_agent_platform.py  test_v181_hosted_runtime.py  test_v182_deployment_targets.py  test_v183_control_plane_remote.py  test_v184_rollouts.py  test_v185_metrics_alerts.py  test_v186_scheduler.py  test_v187_event_queue.py  test_v188_webhook_queue.py  test_v189_queue_jobs.py  test_v195_playground.py  (+20 more)
vscode-extension/: .vscodeignore  LICENSE  README.md  extension.js  language-configuration.json  package-lock.json  package.json
(+567 files in other folders)
