[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mellowlang"
version = "2.5.0"
description = "Mellow Programming Language - a sandbox scripting language for games, tools, and AI behavior"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Seashyne"}]
dependencies = [
]
[project.optional-dependencies]
dev = ["pytest>=8.0"]
lsp = ["pygls>=1.3.1,<3"]
security = ["cryptography>=41.0.0"]
net = ["websockets>=11.0"]
video = ["opencv-python>=4.8"]
all = [
  "pygls>=1.3.1,<3",
  "cryptography>=41.0.0",
  "websockets>=11.0",
  "opencv-python>=4.8"
]


[project.scripts]
mellow = "mellowlang.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["mellowlang*", "frameworks*"]
exclude = ["tests*", "examples*", "docs*", "deploy*", "websites*"]

[tool.setuptools.package-data]
"mellowlang.playground" = ["assets/*.html", "assets/*.css", "assets/*.js"]
